--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.964.0",
     "@prisma/client": "^6.12.0",
     "@swc/core": "^1.10.12",
     "@types/bcryptjs": "^2.4.6",
@@ -30,6 +31,7 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.3",
     "pdf-parse": "^1.1.1",
