marke as read message

--- a/Copy.env
+++ b/Copy.env
@@ -1,13 +1,14 @@
+DATABASE_URL=postgresql://***********
 
-DATABASE_URL="postgresql://postgres:****************"
-# APP_URL="http://192.168********"
-APP_URL="https://scholars*************************"
-FRONTEND_URL="http://19****************"
-JWT_SECRET=D7************
+#APP_URL="https://memo-biol-demographic-lives.trycloudflare.com"
+APP_URL="http://localhost:3001"
+JWT_SECRET=D7HUHFUD
 PORT=3001
 
-node_mailer_user=tqmh*********
-NODE_MAILER_PASSWORD=meie********
- 
- 
- 
+node_mailer_user=email
+NODE_MAILER_PASSWORD=pass
+
+AWS_REGION=eu********
+AWS_BUCKET_NAME=name
+AWS_ACCESS_KEY_ID=********
+AWS_SECRET_ACCESS_KEY=**********
