--- a/Copy.env
+++ b/Copy.env
@@ -12,3 +12,59 @@ AWS_REGION=eu********
 AWS_BUCKET_NAME=name
 AWS_ACCESS_KEY_ID=********
 AWS_SECRET_ACCESS_KEY=**********
+
+
+
+//----------
+
+APP_NAME="FDAHUNTER"
+APP_KEY="A183D8C694FF649A"
+PORT="4010"
+APP_URL=http://localhost:${PORT}
+ 
+CLIENT_APP_URL="http://localhost:3000"
+
+SESSION_SECRET="E81C6C189C391A"
+JWT_SECRET="713b0dd5"
+JWT_EXPIRY="86400000"
+ 
+DATABASE_URL="postgresql://neondb_owner:npg_iO9G6CFodlAx@ep-cool-night-a17lwiq5-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require"
+ 
+REDIS_HOST=127.0.0.1
+REDIS_PASSWORD=
+REDIS_PORT=6379
+ 
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=tqmhosain@gmail.com
+MAIL_PASSWORD=wthjazhnwpqdrsvf
+MAIL_FROM_ADDRESS=tqmhosain@gmail.com
+MAIL_FROM_NAME="${APP_NAME}"
+ 
+GOOGLE_APP_ID=170884802971-2rocit0tffpe02pk79crhcdicmk86c8a.apps.googleusercontent.com
+GOOGLE_APP_SECRET=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
+GOOGLE_CALLBACK_URL=${APP_URL}/api/auth/google/redirect
+ 
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_DEFAULT_REGION=
+AWS_BUCKET=
+AWS_URL=
+AWS_ENDPOINT=https://s3.us-east-2.amazonaws.com
+ 
+GCP_PROJECT_ID=
+GCP_KEY_FILE=
+GCP_API_ENDPOINT=
+GCP_BUCKET=
+ 
+STRIPE_SECRET_KEY=sk_test_xxx
+STRIPE_WEBHOOK_SECRET=whsec_XXXXXXXXXXXXXXXXXXXXX
+ 
+PAYPAL_CLIENT_ID=
+PAYPAL_SECRET=
+PAYPAL_API=
+ 
+# system user
+SYSTEM_USERNAME=admin
+SYSTEM_EMAIL=admin@example.com
+SYSTEM_PASSWORD=12356
