--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node build/index.js",
     "build": "tsc",
     "dev": "nodemon --exec ts-node index.ts",
-    "migrate:diagnosis-status": "ts-node scripts/migrate-all-diagnosis-status.ts"
+    "migrate:diagnosis-status": "ts-node scripts/migrate-all-diagnosis-status.ts",
+    "migrate:rename-transitions": "ts-node scripts/rename-transitions-table.ts"
   },
   "keywords": [],
   "author": "",
