--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dev": "nodemon --exec ts-node index.ts",
     "migrate:diagnosis-status": "ts-node scripts/migrate-all-diagnosis-status.ts",
     "migrate:rename-transitions": "ts-node scripts/rename-transitions-table.ts",
-    "migrate:employees-role": "ts-node scripts/migrate-employees-role.ts"
+    "migrate:employees-role": "ts-node scripts/migrate-employees-role.ts",
+    "update_image_to_zipper_image": "ts-node scripts/update_image-to-zipper_image.ts"
   },
   "keywords": [],
   "author": "",
