--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "formate:transitions": "ts-node scripts/format-transitions-orderNumber.ts",
     "conbune:Massschafterstellung": "ts-node scripts/combine-Massschafterstellung.ts",
     "ststis-admin_order_transitions": "ts-node scripts/status-admin_order_transitions.ts",
-    "order_number:admin_order_transitions": "ts-node scripts/order_number-admin_order_transitions.ts"
+    "order_number:admin_order_transitions": "ts-node scripts/order_number-admin_order_transitions.ts",
+    "admin_order_transitions:status": "ts-node scripts/admin_order_transitions-status-complated.ts"
   },
   "keywords": [],
   "author": "",
