--- a/sampole.env
+++ b/sampole.env
@@ -5,7 +5,8 @@ APP_URL="http://localhost:3001"
 JWT_SECRET=2243434
 PORT=3001
 
-node_mailer_user=*********
+# Must be NODE_MAILER_USER (not node_mailer_user) - case-sensitive on Linux
+NODE_MAILER_USER=*********
 NODE_MAILER_PASSWORD=**** **** **** ****
 
 AWS_REGION=**********
