--- a/sampole.env
+++ b/sampole.env
@@ -5,11 +5,8 @@ APP_URL="http://localhost:3001"
 JWT_SECRET=2243434
 PORT=3001
 
-# Must be NODE_MAILER_USER (not node_mailer_user) - case-sensitive on Linux
-NODE_MAILER_USER=*********
+node_mailer_user=*********
 NODE_MAILER_PASSWORD=**** **** **** ****
-# If port 587 is blocked by hosting, use port 465 instead:
-# EMAIL_USE_PORT_465=true
 
 AWS_REGION=**********
 AWS_BUCKET_NAME=***********
