--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "conbune:Massschafterstellung": "ts-node scripts/combine-Massschafterstellung.ts",
     "ststis-admin_order_transitions": "ts-node scripts/status-admin_order_transitions.ts",
     "order_number:admin_order_transitions": "ts-node scripts/order_number-admin_order_transitions.ts",
-    "admin_order_transitions:status": "ts-node scripts/admin_order_transitions-status-complated.ts"
+    "admin_order_transitions:status": "ts-node scripts/admin_order_transitions-status-complated.ts",
+    "fix:orderNumber": "ts-node scripts/fix-orderNumber-custom-shafts.ts"
   },
   "keywords": [],
   "author": "",
