--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "ststis-admin_order_transitions": "ts-node scripts/status-admin_order_transitions.ts",
     "order_number:admin_order_transitions": "ts-node scripts/order_number-admin_order_transitions.ts",
     "admin_order_transitions:status": "ts-node scripts/admin_order_transitions-status-complated.ts",
-    "fix:orderNumber": "ts-node scripts/fix-orderNumber-custom-shafts.ts"
+    "fix:orderNumber": "ts-node scripts/fix-orderNumber-custom-shafts.ts",
+    "updater-barcode": "ts-node scripts/updater-barcode.ts"
   },
   "keywords": [],
   "author": "",
