--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "migrate:diagnosis-status": "ts-node scripts/migrate-all-diagnosis-status.ts",
     "migrate:rename-transitions": "ts-node scripts/rename-transitions-table.ts",
     "migrate:employees-role": "ts-node scripts/migrate-employees-role.ts",
+    "migrate:employees-password": "ts-node scripts/migrate-employees-password.ts",
     "migrate:barcodeLabel": "ts-node scripts/migrate-barcodeLabel.ts",
     "update_image_to_zipper_image": "ts-node scripts/update_image-to-zipper_image.ts",
     "formate:transitions": "ts-node scripts/format-transitions-orderNumber.ts",
@@ -22,7 +23,8 @@
     "all_data:rady_insole": "ts-node scripts/all_data-stores.ts rady_insole",
     "all_data:milling_block": "ts-node scripts/all_data-stores.ts milling_block",
     "all_data:update:rady_insole": "ts-node scripts/all_data-stores.ts update rady_insole",
-    "all_data:update:milling_block": "ts-node scripts/all_data-stores.ts update milling_block"
+    "all_data:update:milling_block": "ts-node scripts/all_data-stores.ts update milling_block",
+    "all:employees": "ts-node scripts/all-employees.ts"
   },
   "keywords": [],
   "author": "",
