--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "build": "tsc",
     "dev": "nodemon --exec ts-node index.ts",
     "migrate:diagnosis-status": "ts-node scripts/migrate-all-diagnosis-status.ts",
+    "migrate:diagnosis-status-to-string": "ts-node scripts/migrate-diagnosis-status-to-string.ts",
+    "fix:cache-lookup": "ts-node scripts/fix-cache-lookup.ts",
+    "clean:diagnosis-status-data": "ts-node scripts/clean-diagnosis-status-data.ts",
     "migrate:rename-transitions": "ts-node scripts/rename-transitions-table.ts",
     "migrate:employees-role": "ts-node scripts/migrate-employees-role.ts",
     "migrate:employees-password": "ts-node scripts/migrate-employees-password.ts",
